app/assets/stylesheets/application.css.scss
/*
*= require_self
*= require ss-standard
*= require_tree ./components
*/

@import "sass/_global/fonts";

@-webkit-keyframes spinner {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

* {
  font: inherit;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: inherit;
}

body {
  font-family: "Whitney", sans-serif;
  font-size: 16px;
  line-height: 20px;
}

html, body {
  height: 100%;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
}

strong {
  font-weight: bold;
}
em {
  font-style: italic;
}

.input {
  display: block;
  width: 100%;
  border: 1px solid lighten(black, 85%);
  padding: 12px;
  padding-bottom: 10px;
  overflow: hidden;
  outline: none;
}

.Application, .AdminPage, .Location {
  display: flex;
  flex: 1;
  flex-direction: column;
  min-height: 100%;
}

.Header {
  .content {
    display: flex;
  }
  h1 {
    flex: 1;
    font-size: 24px;
    margin: auto 0;
  }
  div.user {
    &:not(:hover) {
      .Button, .separator {
        display: none;
      }
    }
  }
  div.user, a.profile {
    display: flex;
  }
  a, span {
    margin: auto;
  }
  a.profile {
    i.avatar {
      display: block;
      width: 36px;
      height: 36px;
      border: 1px solid lighten(black, 85%);
      background-color: white;
      background-size: cover;
      border-radius: 50%;
    }
  }
  a.profile, i.avatar, span.separator {
    margin-left: 8px;
  }
  span.separator {
    color: lighten(black, 85%);
  }
  .Button {
    color: lighten(black, 50%);
    &:hover {
      color: black;
    }
  }
}

.AdminPage {
  &[data-nav-state="before"] {
    background: blue;
  }
  &[data-nav-state="nav"] {
    background: red;
  }
}

.Drawer, .SectionEditor, .Header {
  .content {
    padding: 24px;
  }
}

.Location {
  flex: 1;
  display: flex;
}

.SectionEditor {
  flex: 1;
  display: flex;
  position: relative;

  .content {
    padding-top: 0;
    flex: 1;
    display: flex;
    > div {
      display: flex;
      flex: 1;
    }

    form {
      display: flex;
      flex: 1;
      flex-direction: column;
      > .mtime {
        position: absolute;
        top: 6px; right: 36px;
        color: lighten(black, 75%);
        font-size: 75%;
        .Icon {
          font-size: 75%;
        }
      }
    }
  }

  .titleInput {
    font-size: 24px;
    border-radius: 3px;
    padding: 19px 12px 14px;
  }

  .ButtonGroup {
    margin-top: 24px;
    display: flex;
    .spacer {
      flex: 1;
    }
    .Button:last-child {
      margin-right: 0;
    }
  }

  .GuideEditor {
    .titleInput {
      border-bottom: none;
      border-radius: 3px 3px 0 0;
    }
   .contentInput {
      border-radius: 3px;
      margin-top: 24px;
      height: 320px;
    }

    .inputWithLabel {
      position: relative;
      label {
        position: absolute;
        padding: 12px;
        padding-bottom: 10px;
      }
      .input {
        padding-left: 180px;
      }
    }

    .metaInputs {
      .inputWithLabel:not(:last-child) {
        .input {
          border-bottom: none;
        }
      }
      .inputWithLabel:last-child {
        .input {
          border-radius: 0 0 3px 3px;
        }
      }
    }
  }

  .noSectionsMessage {
    user-select: none;
    pointer-events: none;
    display: flex;
    flex: 1;
    div {
      margin: auto;
      text-align: center;
      .book {
        display: flex;
        width: 180px; height: 180px;
        border: 8px dotted lighten(black, 90%);
        border-radius: 100%;
        margin-bottom: 24px;
      }
      .Icon {
        display: block;
        position: relative;
        top: 14px;
        font-size: 86px;
        line-height: 86px;
        color: lighten(black, 80%);
        margin: auto;
      }
      p {
        font-size: 24px;
        line-height: 28px;
        color: lighten(black, 65%);
      }
    }
  }
}

.assetsColours {
  flex: 1;
  display: flex;
  flex-direction: column;
  .AssetGroupsList, .ColoursList {
    flex: 1;
    display: flex;
    flex-direction: column;
    margin: -12px;
    padding: 24px 0;
    
    &[data-show="false"] {
      display: none;
    }
    .container {
      margin: auto;
    }
  }
}

.GuidesListPage {
  margin: auto;
  padding-bottom: 72px;
  .GuidesList {
    .grid {
      display: flex;
      flex-wrap: wrap;
      justify-content: center;
      .GuidesListItem {
        display: flex;
        position: relative;
        width: 320px;
        height: 320px;
        border-radius: 16px;
        background: lighten(black, 85%);
        margin: 12px;
        cursor: pointer;
        .content {
          text-align: center;
          margin: auto;
          h2 {
            margin: 6px 24px 0;
            font-size: 36px;
            line-height: 42px;
          }
        }
        .mtime, .url {
          font-size: 85%;
        }
        .url {
          display: block;
          margin: 4px 32px 0;
          overflow: hidden;
          white-space: nowrap;
          text-overflow: ellipsis;
          &:hover {
            text-decoration: underline;
          }
        }
        .mtime {
          position: absolute;
          bottom: 0; left: 0; right: 0;
          text-align: center;
          padding: 12px;
          opacity: 0.5;
          .Icon {
            font-size: 75%;
            margin-right: 4px;
          }
        }
        .Button.delete {
          font-size: 75%;
          border: 2px solid transparent;
          border-radius: 50%;
          position: absolute;
          top: 0; right: 0;
          margin: 8px;
          width: 24px;
          height: 24px;
          text-align: center;
          opacity: 0;
          &:hover {
            border-color: currentColor;
            opacity: 1!important;
          }
        }
        &:hover .Button.delete {
          opacity: 0.5;
        }
      }
    }
    .Button {
      margin-right: 0;
    }
  }
  footer {
    margin-top: 12px;
    text-align: center;
  }
}

.GuideEditPage {
  flex: 1;
  display: flex;
}

.LoginPage {
  margin: auto;
  padding: 24px;
  h1 {
    font-size: 24px;
    line-height: 32px;
    text-align: center;
    margin-bottom: 12px;
  }
  .input {
    width: 320px;
    &.email {
      border-radius: 3px 3px 0 0;
    }
    &.password {
      border-top: none;
      border-radius: 0 0 3px 3px;
    }
  }
  .ButtonGroup {
    margin-top: 12px;
    text-align: center;
    .Button {
      margin-right: 0;
    }
  }
}

@import "components/Button";
@import "components/Spinner";
@import "components/Drawer";
@import "components/AssetGroupsList";
@import "animations";

